tests/checker/diagnostics/0510_modules_signature_arity_mismatch_08.ml
module U : sig
  type 'a box
  val x : (int, bool) box
end = struct
  type 'a box = Box of 'a
  let x = Box 7
end
